--- a/app/views/knb_auction/auctions/_auction.haml
+++ b/app/views/knb_auction/auctions/_auction.haml
@@ -1,35 +1,31 @@
 -content_for :head do
   = stylesheet_link_tag 'knb_auction/application'
 
-%ul.auction-list
-  %li.auction
+.auction
+  -unless controller.controller_name == "home"
+    - status_label(auction.status) {auction.status.to_s.upcase}
+    - if current_user && current_user.admin?
+      .pull-right.btn.btn-danger.btn-mini= link_to "delete", auction, :method=>:delete, :confirm=>"Are you sure?"
+      .clear-fix.pull-right= link_to 'edit', edit_auction_path(auction)
+  .auction-item
+    .span1
+      .product-image= image_tag auction.product.main_image(:thumb)
+    .span8
+      .product-info
+        .name
+          = auction_product_name( auction )
+        .description= auction.product.description
+    -if auction.active?
+      .span1
+        .time-left
+          = auction_time_left( auction )
+          .time-left-label="left to bid"
     -unless controller.controller_name == "home"
-      .status-label.upper.left
-        - status_label(auction.status) {auction.status.to_s.upcase}
-      - if current_user && current_user.admin?
-        .admin-menu.upper.right
-          %ul
-            %li= link_to 'Edit', edit_auction_path(auction)
-            %li= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
-    %table.auction-item
-      %tr
-        %td.product-image{style: "width: 75px; height:75px;"}
-          = image_tag auction.product.main_image(:thumb)
-        %td.product-info
-          .name
-            -unless controller.controller_name == "home"
-              = link_to auction.product_name, auction_path(auction)
-            -else 
-              = auction.product_name
-          .description= auction.product.description
-        -if auction.active?
-          %td.time-left
-            = auction_time_left( auction )
-            .time-left-label="left to bid"
-        -unless controller.controller_name == "home"
-          %td.high-bid-info
-            ="high bid is"
-            .high-bid= "#{auction.high_bid.goodles} G"
-            .high-bidder= bid_owner_name( auction.high_bid )
-          -if auction.active? && current_user && current_user.child?
-            %td.bid-button= link_to 'Bid', new_auction_bid_path(auction)
+      .span1
+        .high-bid-info
+          ="high bid is"
+          .high-bid= "#{auction.high_bid.goodles} G"
+          .high-bidder= bid_owner_name( auction.high_bid )
+    -if auction.active? && current_user && current_user.child?
+      .span1
+        .btn.btn-success= link_to 'Bid', new_auction_bid_path(auction)
