--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -1,21 +1,3 @@
-@font-face {
-   font-family: 'Comfort-Regular';
-   src: asset-url('fonts/Comfortaa-Regular.ttf', font);
-}
-@font-face {
-   font-family: 'Comfort-Light';
-   src: asset-url('fonts/Comfortaa-Light.ttf', font);
-}
-@font-face {
-   font-family: 'Comfort-Bold';
-   src: asset-url('fonts/Comfortaa-Bold.ttf', font);
-}
-
-@font-face {
-   font-family: 'Alber-Bold';
-   src: asset-url('fonts/Alber-Bold.otf', font);
-}
-
 .auction {
   padding: 5px;
   background-color:none!important;
@@ -30,7 +12,7 @@
   border-radius: 15px;
   overflow:hidden;
   font-size:18pt;
-  font: "Comfort-Regular", sans-serif;
+  font-family: "Comfort-Regular", sans-serif;
 }
 
 .auction-item {
@@ -38,7 +20,7 @@
 }
 
 .time-left {
-  font: "Comfort-Regular", sans-serif;
+  font-family: "Comfort-Regular", sans-serif;
   font-size: 1em;
   text-align:center;
   color:#ea4c1e;
@@ -46,7 +28,7 @@
 }
 
 .high-bid-info {
-  font: "Comfort-Regular", sans-serif;
+  font-family: "Comfort-Regular", sans-serif;
   font-size: 1em;
   text-align:center;
   line-height:1.25em;
@@ -62,7 +44,7 @@
   vertical-align:text-top;
   text-align:center;
   .name {
-    font: "Comfort-Bold", sans-serif;
+    font-family: "Comfort-Bold", sans-serif;
     font-size: 1em;
     line-height:1.33;
     text-align:center;
@@ -73,7 +55,7 @@
     }
   }
   .description {
-    font: "Comfort-Regular", sans-serif;
+    font-family: "Comfort-Regular", sans-serif;
     font-size: .66em;
     color:#08214A;
     text-align:center;
@@ -114,7 +96,7 @@
 .auction-small {
   margin-left:20px;
   font-size: 14pt;
-  font: "Comfort-Regular", sans-serif;
+  font-family: "Comfort-Regular", sans-serif;
   img{
     width:auto;
     height:58px;
