--- a/app/views/knb_auction/auctions/_small_auction.html.haml
+++ b/app/views/knb_auction/auctions/_small_auction.html.haml
@@ -1,5 +1,5 @@
 -content_for :head do
-  = stylesheet_link_tag 'knb_auction/application'
+  = stylesheet_link_tag 'knb_auction/auction'
 
 .auction.auction-small
   .auction-item
