--- a/app/views/knb_auction/bids/new.html.haml
+++ b/app/views/knb_auction/bids/new.html.haml
@@ -1,7 +1,9 @@
 = render :partial => "knb_auction/application/auction_engine"
 
-%h1.title= "New bid for #{@auction.product_name.upcase}"
+%h3.title.center= "New bid for #{@auction.product_name.upcase}"
 
-%h4.minimum-bid= minimum_bid(@auction)
-%h4.user-goodles= "You can spend #{goodles_to_spend(current_user)} G"
+%h4.center
+  = minimum_bid(@auction)
+  %br
+  = "You can spend #{goodles_to_spend(current_user)} G"
 .bid-entry-form= render 'form'
