Application.css change

--- a/app/assets/stylesheets/knb_auction/application.css
+++ b/app/assets/stylesheets/knb_auction/application.css
@@ -9,28 +9,6 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *
- *= require_self
- *= require_tree .
+ *= require auction
+ *= require bid
  */
- 
- @font-face {
-    font-family: 'Comfort-Regular';
-    src: asset-url('fonts/knb_auction/Comfortaa-Regular.ttf', font);
- }
- @font-face {
-    font-family: 'Comfort-Light';
-    src: asset-url('fonts/knb_auction/Comfortaa-Light.ttf', font);
- }
- @font-face {
-    font-family: 'Comfort-Bold';
-    src: asset-url('fonts/knb_auction/Comfortaa-Bold.ttf', font);
- }
-
- @font-face {
-    font-family: 'Alber-Bold';
-    src: asset-url('fonts/knb_auction/Alber-Bold.otf', font);
- }
- 
- body {
-   font-family: "Comfort-Regular", sans-serif;
- }
