--- a/app/views/knb_auction/application/_auction_engine.html.haml
+++ b/app/views/knb_auction/application/_auction_engine.html.haml
@@ -1,2 +1,3 @@
 -content_for :head do
-  = stylesheet_link_tag 'knb_auction/application'
+  = stylesheet_link_tag 'knb_auction/auction'
+  = stylesheet_link_tag 'knb_auction/bid'
