Change font path

--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -1,19 +1,19 @@
 @font-face {
    font-family: 'Comfort-Regular';
-   src: asset-url('fonts/knb_auction/Comfortaa-Regular.ttf', font);
+   src: asset-url('fonts/Comfortaa-Regular.ttf', font);
 }
 @font-face {
    font-family: 'Comfort-Light';
-   src: asset-url('fonts/knb_auction/Comfortaa-Light.ttf', font);
+   src: asset-url('fonts/Comfortaa-Light.ttf', font);
 }
 @font-face {
    font-family: 'Comfort-Bold';
-   src: asset-url('fonts/knb_auction/Comfortaa-Bold.ttf', font);
+   src: asset-url('fonts/Comfortaa-Bold.ttf', font);
 }
 
 @font-face {
    font-family: 'Alber-Bold';
-   src: asset-url('fonts/knb_auction/Alber-Bold.otf', font);
+   src: asset-url('fonts/Alber-Bold.otf', font);
 }
 
 body {
