--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -1,21 +1,3 @@
-@font-face {
-   font-family: 'Comfort-Regular';
-   src: asset-url('fonts/Comfortaa-Regular.ttf', font);
-}
-@font-face {
-   font-family: 'Comfort-Light';
-   src: asset-url('fonts/Comfortaa-Light.ttf', font);
-}
-@font-face {
-   font-family: 'Comfort-Bold';
-   src: asset-url('fonts/Comfortaa-Bold.ttf', font);
-}
-
-@font-face {
-   font-family: 'Alber-Bold';
-   src: asset-url('fonts/Alber-Bold.otf', font);
-}
-
 body {
   font-family: "Comfort-Regular", sans-serif;
 }
@@ -53,6 +35,7 @@ body {
   font-family: "Comfort-Regular", sans-serif;
   font-size: 1em;
   text-align:center;
+  color:#08C;
   line-height:1.25em;
 }
 
@@ -92,9 +75,6 @@ body {
   input{
     padding: 6px 10px;
     border: 3px solid #fff;
-    background: #D5451C;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #D5451C), color-stop(14%, #F04E1F), color-stop(83%, #FDAF10), color-stop(100%, #FCE3AF));
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d5451c', endColorstr='#fce3af', GradientType=0 );
     font: 1.25em Verdana, Geneva, sans-serif;
     font-weight: bold;
     text-transform: uppercase;
