refactor small_auctions info for use by other controllers besides Home

--- a/app/views/knb_auction/auctions/_small_auction.html.haml
+++ b/app/views/knb_auction/auctions/_small_auction.html.haml
@@ -8,7 +8,7 @@
     .span7
       .product-info
         .name
-          = auction_product_name( auction )
+          = auction.product_name.upcase
         .description= auction.product.description
     -if auction.active?
       .span3
