--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -24,4 +24,4 @@
   %br
   .row-fluid
     .offset4.span4
-      = button_to('create a new auction', new_auction_path, class: "btn btn-warning btn-large btn-span")
+      = link_to('create a new auction', new_auction_path, class: "btn btn-warning btn-large btn-span")
