--- a/spec/dummy/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/spec/dummy/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,5 @@
 @import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
+// @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
@@ -8,13 +8,13 @@
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
-@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
-@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
-@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
-@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
+//@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
+//@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
+//@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
+//@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
 
 // Font Awesome
-@import "fontawesome";
+//@import "fontawesome";
 
 // Glyphicons
 //@import "twitter/bootstrap/sprites.less";
@@ -30,15 +30,16 @@
 // Example:
 // @linkColor: #ff0000;
 
-@bodyBackground: #244e91;
+
+@bodyBackground: #33a4de;
 @navbarHeight: 50px;
 @navbarBackground: #244e91;
 @navbarBackgroundHighlight: #244e91;
 @navbarText: @white;
-@navbarLinkColor: @white;
-@navbarLinkColorHover: @orange;
-@navbarLinkColorActive: #8ee8f2;
-@navbarLinkBackgroundActive: #244e91;
+@navbarLinkColor:@white;
+@navbarLinkColorHover:#8ee8f2;
+@navbarLinkColorActive:@orange;
+@navbarLinkBackgroundActive:darken(#244e91, 6%);
 
 @gridColumnWidth: 70px;
 @gridGutterWidth: 30px;
