Bad CSS font in Auction.scss

--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -56,7 +56,7 @@ body {
     vertical-align:text-top;
     text-wrap:none;
     a {
-      font: 18pt, "Comfort-Bold", sans-serif;
+      font-size: 18pt;
     }
   }
   .description {
