--- a/spec/dummy/app/assets/stylesheets/application.css.scss
+++ b/spec/dummy/app/assets/stylesheets/application.css.scss
@@ -61,7 +61,7 @@ $orange1: #BE3009;
 }
 
 body, h1, h2, h3, h4, h5, h6, a, p {
- font-family: 'Comfort-Regular', cursive;
+ font-family: 'Comfort-Regular', serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
