--- a/spec/dummy/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/spec/dummy/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -8,16 +8,16 @@
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
-//@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
-//@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
-//@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
-//@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
+@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
+@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
+@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
+@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
 
 // Font Awesome
-//@import "fontawesome";
+@import "fontawesome";
 
 // Glyphicons
-//@import "twitter/bootstrap/sprites.less";
+// @import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
 //
@@ -29,7 +29,6 @@
 //
 // Example:
 // @linkColor: #ff0000;
-
 
 @bodyBackground: #33a4de;
 @navbarHeight: 50px;
