Initial upgrade for knb-stripe

--- a/app/views/knb_auction/bids/new.html.haml
+++ b/app/views/knb_auction/bids/new.html.haml
@@ -5,5 +5,5 @@
 %h4.center
   = minimum_bid(@auction)
   %br
-  = "You can spend #{goodles_to_spend(current_user)} G"
+  = "You can spend #{goodles_to_spend(@active_child)} G"
 .bid-entry-form= render 'form'
