--- a/app/views/knb_auction/auctions/_auction.html.haml
+++ b/app/views/knb_auction/auctions/_auction.html.haml
@@ -1,7 +1,7 @@
 .auction
   - if current_user && current_user.admin?
     .pull-right= button_to "delete", auction, :method=>:delete, :confirm=>"Are you sure?", class: "btn btn-danger btn-mini"
-    .pull-right= button_to 'edit', auction_engine.edit_auction_path(auction), class: "btn btn-info btn-mini"
+    .pull-right= button_to 'edit', auction_engine.edit_auction_path(auction), :method=>:get, class: "btn btn-info btn-mini"
   - status_label(auction.status) {auction.status.to_s.upcase}
   .auction-item
     .span1.product-image
@@ -22,7 +22,7 @@
         ="high bid is"
         .high-bid= "#{auction.high_bid.goodles} G"
         .high-bidder= bid_owner_name( auction.high_bid )
-  -if auction.active? && current_user && (current_user.child? || current_user.admin?)
+  -if auction.active? && current_user
     .span2
       .bid-button= button_to 'Bid', auction_engine.new_auction_bid_path(auction), method: :get
 %br
