--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -2,6 +2,10 @@ body {
   font-family: "Comfort-Regular", sans-serif;
 }
 
+.pagination {
+  text-align: center;
+}
+
 .auction {
   padding: 5px;
   background-color:none!important;
