Remove Auction viewing options

--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -7,19 +7,18 @@
       = image_tag "knb_auction/kids-klout-banner.png"
 
 %h4.center
-  = link_to "All", :action => "index", :filter => "all"
-  \|
+  / = link_to "All", :action => "index", :filter => "all"
+  / \|
   = link_to "Active", :action => "index", :filter => "active"
-  \|
-  = link_to "Closed", :action => "index", :filter => "closed"
+  / \|
+  / = link_to "Closed", :action => "index", :filter => "closed"
   \|
   = link_to "Upcoming", :action => "index", :filter => "upcoming"
 %br
 .row-fluid
   .span12
+    = will_paginate @auctions, renderer: BootstrapPagination::Rails
     = render @auctions
-.row-fluid
-  .span12
     = will_paginate @auctions, renderer: BootstrapPagination::Rails
 
 
